# web_django

./: .env  .env.sample  .flake8  .gitignore  README.md  base.html  catalog.html  category.html  contacts.html  manage.py  pyproject.toml  server.py
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_post_slug.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: initial_data.json
catalog/management/commands/: create_moderator_group.py  del_all_and_load_new_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at.py  0002_alter_product_options_product_is_published_and_more.py  0003_contactinfo.py  0003_product_owner.py  0004_category_image.py
catalog/static/: style.css
catalog/templates/: base.html  category_list.html  contacts.html  home.html  menu.html  product_confirm_delete.html  product_create.html  product_detail.html  product_list_by_category.html  product_list_by_category_cached.html  product_update.html  sidebar_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
old_html/: base.html  catalog.html  category.html  contacts.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
users/templates/users/: login.html  profile_edit.html  register.html
web_shop/: urls.py
web_shop/web_shop/: asgi.py  settings.py  urls.py  wsgi.py
